# OTP

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  OTP.cabal  README.md  cabal.project  one-time-password.cabal  todo.org
.github/workflows/: haskell.yml  linting.yml  one-time-password.yml
Data/: OTP.hs
Test/: opt.hs
src/: HashImpl.hs
src/Data/: OTP.hs
test/: Test.hs  opt.hs
