name:                OTP
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            HMAC-Based and Time-Based One-Time Passwords
-- description:         
license:             MIT
license-file:        LICENSE
copyright:           (c) 2012 Artem Leshchev
author:              Artem Leshchev
maintainer:          matshch@gmail.com
homepage:            https://github.com/matshch/OTP
bug-reports:         https://github.com/matshch/OTP/issues
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.OTP
  build-depends:       base, Crypto >= 4, time >= 1

Test-Suite tests
    type:               exitcode-stdio-1.0
    main-is:            Test/opt.hs
    build-depends:      base, Crypto >= 4, time >= 1.1