name:                one-time-password
version:             2.0.0
synopsis:            HMAC-Based and Time-Based One-Time Passwords

description: Implements HMAC-Based One-Time Password Algorithm as
             defined in RFC 4226 and Time-Based One-Time Password
             Algorithm as defined in RFC 6238.

license:        MIT
license-file:   LICENSE
copyright:      (c) 2012 Artem Leshchev, 2016 Aleksey Uimanov
author:         Artem Leshchev, Aleksey Uimanov
maintainer:     The Haskell Cryptography contributors
homepage:       https://github.com/haskell-cryptography/one-time-password
bug-reports:    https://github.com/haskell-cryptography/one-time-password/issues
category:       Cryptography
build-type:     Simple
cabal-version:  >=1.10

extra-source-files: CHANGELOG.md
                  , README.md

tested-with:
  GHC ==9.2.8 || ==9.4.7 || ==9.6.2

source-repository head
  type:     git
  location: git://github.com/haskell-cryptography/one-time-password.git

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  exposed-modules:   Data.OTP
  build-depends:     base >= 4.16 && < 5
                   , bytestring
                   , cereal
                   , cryptonite
                   , memory
                   , time >= 1.1
  ghc-options: -Wall

test-suite tests
  default-language: Haskell2010
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  ghc-options: -Wall
  default-extensions: ExistentialQuantification
                    , OverloadedStrings
                    , RankNTypes
  main-is:         Test.hs
  build-depends:   base >= 4.16 && < 5
                 , bytestring
                 , cryptonite
                 , one-time-password
                 , tasty
                 , tasty-hunit
                 , time >= 1.1
